# bureau-rs

./: AGENT.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
docs/: future-directions.md  initial-prompt.md
examples/hello-world/: config.toml  phases.toml  problem.md
examples/samba-rs/: config.toml  problem.md  style.md
src/: agent.rs  artifact.rs  checkpoint.rs  config.rs  crates_io.rs  docs_rs.rs  engine.rs  event_log.rs  gate.rs  graph.rs  lib.rs  llm.rs  main.rs  merge.rs  mock_driver.rs  node_context.rs  node_validate.rs  paths.rs  phase.rs  placeholders.rs  pricing.rs  prompts.rs  render.rs  rust_summary.rs  scheduler.rs  spec_summary.rs  state.rs  task.rs  tools.rs  worktree.rs
src/prompts/: architect_nonwriter.md  architect_writer.md  common.md  debug_critic.md  debug_writer.md  iface_critic.md  iface_writer.md  impl_critic.md  impl_writer.md  judge.md  quickfix.md  spec_critic.md  spec_reviser.md  spec_writer.md  tests_critic.md  tests_writer.md
src/web/: mod.rs  ui.rs
tests/: cargo_integration.rs  engine_e2e.rs  smoke.rs  tools_test.rs  web_issues.rs  web_reset.rs
