[package]
name = "bureau-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.35"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit", "visit-mut", "parsing", "printing"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2"
git2 = "0.20"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
bytes = "1"
parking_lot = "0.12"
walkdir = "2"
indexmap = { version = "2", features = ["serde"] }
mpatch = { version = "1.4.4", default-features = false }
urlencoding = "2"
rs-trafilatura = "0.2"

[dev-dependencies]
tempfile = "3"
